# book-cover-generation

./: .gitignore  README.md  pyproject.toml
notebooks/: test.ipynb
src/scrapper/: goodreads.py
