[tool.poetry]
name = "book-cover-generation"
version = "0.1.0"
description = ""
authors = ["Samuel Arcadinho <ssam_dav@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.10.0"
datasets = "^2.0.0"
ipykernel = "^6.12.1"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
